@@ -4,8 +4,6 @@ for version 1.1.x
 ------------------------------------------------------------------------------
 - Add e-mail reporting patch from David Tejedor.
 
-- Add check for unknown command line flags, and halt execution if found.
-
 - Audit warning/error designations
 
 - Add interactive mode to generate config files.
