@@ -23,6 +23,7 @@ VERSION 1.1.6 (??? ?? ??:?? 2004)
 - Downgraded close() file errors to warnings
 - Added utils/backup_dpkg.sh to backup Debian package information
 - Simplified the utils/ section of the Makefile under "make tar"
+- Now exits with an error if unknown command line flags are found
 
 VERSION 1.1.5 (Jun 20 20:56 2004)
 ------------------------------------------------------------------------------
